tests/baselines/reference/thisInObjectLiterals.errors.txt
tests/cases/conformance/expressions/thisKeyword/thisInObjectLiterals.ts(15,21): error TS2339: Property 'spaaace' does not exist on type '{ f(): any; }'.


==== tests/cases/conformance/expressions/thisKeyword/thisInObjectLiterals.ts (1 errors) ====
    class MyClass {
        t: number;
    
        fn() {
            type ContainingThis = this;
            //type of 'this' in an object literal is the containing scope's this
            var t = { x: this, y: this.t };
            var t: { x: ContainingThis; y: number };
        }
    }
    
    //type of 'this' in an object literal method is the type of the object literal
    var obj = {
        f() {
            return this.spaaace;
                        ~~~~~~~
!!! error TS2339: Property 'spaaace' does not exist on type '{ f(): any; }'.
        }
    };
    var obj: { f: () => any; };
    